# GGPL-ENQUIRY-PROJECT

./: .env.example  .gitignore  0.0.9  DEPLOYMENT.md  GDRIVE_SETUP.md  LAYMAN_FRIENDLY_UI_UX_PLAN.md  README.md  UI_UX_IMPLEMENTATION_PLAN.md  app.py  docker-compose.prod.yml  plan.md  requirements.txt  streamlit-parity-gaps.md  sub-plan.md  update-portal.cmd
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_supabase_quotes_baseline.py  0002_phase1_compatibility.py  0003_phase_a_persistence.py  0004_app_users.py  0005_app_user_profile_fields.py
apps/api/app/: auth_session.py  config.py  deps.py  main.py  observability.py
apps/api/app/db/: __init__.py  repositories.py
apps/api/app/routers/: auth.py  chat.py  converter.py  customers.py  dashboard.py  docs.py  extraction.py  health.py  notifications.py  outlook.py  quotes.py  users.py
apps/api/app/schemas/: __init__.py  chat.py  common.py  converter.py  customers.py  jobs.py  quotes.py  users.py
apps/api/app/scripts/: export_all_to_drive.py
apps/api/app/services/: __init__.py  approved_quote_cache.py  enquiry_register.py  export_parity.py  (+6 more)
apps/api/scripts/: import_customers_from_crm.py
apps/api/tests/: conftest.py  test_backend_stabilization.py  test_enquiry_register.py  test_enquiry_workflow_granular.py  test_excel_preprocessor.py  test_export_parity.py  test_health.py  test_material_normalization_rules.py  test_notification_hub.py  test_phase1_api.py  test_quote_pdf_serial_flags.py  test_reference_quote_patterns.py  test_repository_persistence.py
(+109 files in other folders)
