[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gasket-quote-api"
version = "0.1.0"
description = "FastAPI service for the GGPL gasket quote app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.1.0",
  "sentry-sdk[fastapi]>=2.13.0",
  "posthog>=3.6.0",
  "celery[redis]>=5.4.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.1",
  "pdfplumber>=0.10.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../..", "../../packages"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
